--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,10 +8,11 @@ pages:
   script:
   - yarn install
   - yarn run build
+  - cp -r docs/.vuepress/dist/* public/
 
   artifacts:
     paths:
-        - docs/.vuepress/dist/
+        - public/
   
   only:
   - master
